Modifies light compare image module heights to prevent clipping issues

--- a/src/packages/modules/light-compare-d9/css/light-compare-d9.scss
+++ b/src/packages/modules/light-compare-d9/css/light-compare-d9.scss
@@ -47,6 +47,7 @@ $windowWidth: 1100;
   .modal-inner {
     max-width: 1100px;
     overflow: hidden;
+    width: 86%;
   }
   .modal-header,
   .modal-body {
